cmake_minimum_required(VERSION 3.8)
project(ppm_bridge)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)

# Executables
add_executable(ppm_bridge_node src/ppm_bridge_node.cpp)
ament_target_dependencies(ppm_bridge_node rclcpp std_msgs sensor_msgs)

# Installation
install(TARGETS
  ppm_bridge_node
  DESTINATION lib/${PROJECT_NAME})

# Test Build
if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

install(DIRECTORY
  config launch DESTINATION share/${PROJECT_NAME})

ament_package()
